add some styling

--- a/list.html
+++ b/list.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <title>Extension List</title>
+    <link rel="stylesheet" href="css/list.css">
   </head>
   <body>
     <h1>Extension List</h1>
-    <ol id="extensionList"></ol>
+    <div class="container">
+      <ol id="extensionList"></ol>
+    </div>
     <script src="js/list.js"></script>
   </body>
 </html>
